Closed Bug 1289296 Opened 8 years ago Closed 8 years ago

Assert |!IsShutdown()| in MediaDecoder::NetworkError()

Categories

(Core :: Audio/Video: Playback, defect, P3)

defect

Tracking

()

RESOLVED FIXED
mozilla50
Tracking Status
firefox50 --- fixed

People

(Reporter: jwwang, Assigned: jwwang)

References

Details

Attachments

(1 file)

Like bug 1289290, it is easy to prove IsShutdown() is false inside NetworkError().
Assignee: nobody → jwwang
Blocks: 1289288
Priority: -- → P3
Comment on attachment 8774618 [details]
Bug 1289296 - Assert |!IsShutdown()| in MediaDecoder::NetworkError().

https://reviewboard.mozilla.org/r/67078/#review63954
Attachment #8774618 - Flags: review?(kaku) → review+
Thanks!
Pushed by jwwang@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/277d6fc32922
Assert |!IsShutdown()| in MediaDecoder::NetworkError(). r=kaku
https://hg.mozilla.org/mozilla-central/rev/277d6fc32922
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla50
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: