Bug 1289296 - Assert |!IsShutdown()| in MediaDecoder::NetworkError(). r=kaku

MozReview-Commit-ID: HL8piKSPU1B