dom/media/MediaDecoder.cpp
@@ -1039,9 +1039,7 @@ void
 MediaDecoder::NetworkError()
 {
   MOZ_ASSERT(NS_IsMainThread());
-  if (IsShutdown())
-    return;
-
+  MOZ_ASSERT(!IsShutdown());
   mOwner->NetworkError();
   Shutdown();
 }
